# ble-plugin-unity

bleplugin_projects/Linux/: CMakeLists.txt  build.sh  setup.sh
bleplugin_projects/Linux/src/: BleDeviceManager.cpp  BleDeviceManager.h  BleDeviceObject.cpp  BleDeviceObject.h  BleDeviceWatcher.cpp  BleDeviceWatcher.h  BluetoothAdapterChecker.cpp  BluetoothAdapterChecker.h  UnityInterface.cpp  UnityInterface.h  UuidManager.cpp  UuidManager.h
